--- a/lib/app_web/controllers/page_html/home.html.heex
+++ b/lib/app_web/controllers/page_html/home.html.heex
@@ -9,6 +9,7 @@
     // Pass through your server href if you are embedding on an endpoint.
     // Otherwise, you can pass whatever endpoint you want Sandbox to start up with here.
     initialEndpoint: "http://localhost:4000/gql",
+    <%!-- initialEndpoint: "https://app.spoonme.kitchen/api/graphql", --%>
   });
   // advanced options: https://www.apollographql.com/docs/studio/explorer/sandbox#embedding-sandbox
 </script>
